--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
           <p id="minutes">00</p>
           <p>:</p>
           <p id="seconds">00</p>
+          <p id="amPm">AM</p>
         </div>
 
         <div class="calender-container">
-          <p class="month" id="month">November</p>
-          <p class="day" id="day">Saturday</p>
-          <p class="date" id="date">25</p>
-          <p class="year" id="year">2024</p>
+          <p class="month" id="month"></p>
+          <p class="day" id="day"></p>
+          <p class="date" id="date"></p>
+          <p class="year" id="year"></p>
         </div>
       </div>
     </main>
